# boids-rtree

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  vcpkg.json
src/: fps.hpp  main.cpp
src/geometry/: angle.hpp  body.hpp  box.hpp  spatial.hpp  vector2.hpp
